--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
         tools:targetApi="31">
         <activity
+            android:name=".Activity.GenresActivity"
+            android:exported="false"/>
+        <activity
             android:name=".Activity.SingerActivity"
             android:exported="false"
             android:label="@string/title_activity_singer"
